<?xml version="1.0"?>
<package format="2">
  <name>mj_ros2_control_demos</name>
  <version>0.0.0</version>
  <description>mj_ros2_control_demos</description>

  <license>Apache License 2.0</license>
  <maintainer email="christoph.froehlich@ait.ac.at">Christoph Froehlich</maintainer>

  <author>Alejandro Hernández</author>
  <author>Christoph Froehlich</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>tricycle_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mj_ros2_control</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>